[project]
name = "boston-core-mcp"
version = "1.0.0"
description = "Production-ready Boston MCP servers with comprehensive error handling, rate limiting, and monitoring"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28",
    "mcp>=1.19",
    "tenacity>=9.1",
    "python-json-logger>=4.0",
    "pydantic>=2.12",
    "pydantic-settings>=2.11",
    "cachetools>=6.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.0",
]

